section2 slide2 div

--- a/account.html
+++ b/account.html
@@ -56,11 +56,17 @@
 
             <div class="slide" id="slide2">
                 <!-- Si puce déjà commandé, cacher cette section -->
-                <div id="commande">
                     Souhaitez-vous commander votre NFP ? <br />
+
+                <div id="porte">
                     NFP Porte-Clé : 25€<br />
+                </div>
+                <div id="bracelet">
                     NFP Bracelet  : 30€<br />
+                </div>
+                <div id="colier">
                     NFP Colier    : 20€<br />
+                </div id="implant">
                     NFP Implant   : 100€ (Implantation offerte pour la premiere puce achetée)<br />
                     Service       : 10€/mois* 
                 </div>
