--- a/account.html
+++ b/account.html
@@ -5,6 +5,7 @@
   <title>NFM - Near Field Market</title>
   <link rel="stylesheet" href="css/account.css" />
   <link rel="stylesheet" href="css/card.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <script src="/javascript/card.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.js"></script>
@@ -66,7 +67,8 @@
                 </div>
                 <div id="colier">
                     NFP Colier    : 20€<br />
-                </div id="implant">
+                </div>
+                <div id="implant">
                     NFP Implant   : 100€ (Implantation offerte pour la premiere puce achetée)<br />
                     Service       : 10€/mois* 
                 </div>
@@ -200,8 +202,7 @@
 
 
         <!-- Section 4 -->
-  0.      <div class="section" id="section4">Some section</div>
-    </div>
+      <div class="section" id="section4">Some section</div>
 
 
 
