--- a/account.html
+++ b/account.html
@@ -9,9 +9,11 @@
   <link rel="stylesheet" href="css/responsive.css" />
   <script src="/javascript/card.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.css" />
+  <link rel="stylesheet" href="css/next.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <script src="/javascript/number.js"></script>
+
 </head>
 
 <body>
@@ -35,7 +37,7 @@
                 </div>
             <a href="#buy">
                 <div id="more">
-                     Buy More Here
+                  <button class="learn-more">Buy more</button>
                 </div>
             </a>
 
@@ -48,19 +50,15 @@
 
 
               
-            <div class="slide" id="slide1">
-                
-                <h1 id="choose">Type the number of credits <br /> you want to buy  : </h1>
-              <input type="text" name="number" placeholder="num" />
-              <div class="asd">zafer</div>
-  <!-- ## wrapper -->
+          <div class="slide" id="slide1">
+    <!-- ## wrapper -->
   <div class="wrapper">
     <!-- ## phone area -->
     <div class="phone">
-      <span class="title">Type the number here</span>
+      <span class="title">Phone Keyboard</span>
       <!-- ## phone area -->
       <div class="phone-container">
-        <input type="text" maxlength="11" class="number-input" id="numberInput" value="" placeholder="Number"/>
+        <input type="text" maxlength="11" class="number-input" id="numberInput" value="" placeholder="Phone Number"/>
         <!-- ## keyboard -->
         <div class="keyboard">
           <div class="number">
@@ -280,42 +278,6 @@ btn.onclick = function() {
         button: "Aww yiss!",
     });
 }
-
-</script>
-
-<script>
-
-$(".number-input").keyup(function(e){
-  if($(this).val().length >= 11)
-       $(".call-button").addClass("show");  
-  if(e.which == 8)
-     $(".call-button").removeClass("show");
-})
-//called when key is pressed in textbox
-$(".number-input").keypress(function (e) {
-     //if the letter is not digit then display error and don't type anything
-     if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
-        //display error message
-               return false;
-    }
-});
-
-
-$("[data-number]").on('click',function(){
-  if($(".number-input").val().length < 11){
-    var phoneNumber = $(".number-input").val() + $(this).data("number");
-    $(".number-input").val(phoneNumber);
-  }
-  if($(".number-input").val().length == 11)
-     $(".call-button").addClass("show");  
-});
-
-$(".delete").on('click',function(){
-  var phoneNumber = $(".number-input").val().slice(0,-1);
-  $(".number-input").val("");
-  $(".number-input").val(phoneNumber);
-  $(".call-button").removeClass("show");
-});
 
 </script>
 
