sauvegarde pour mac

--- a/account.html
+++ b/account.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="css/account.css" />
   <link rel="stylesheet" href="css/card.css" />
   <link rel="stylesheet" href="css/number.css" />
-  <link rel="stylesheet" href="css/responsive.css" />
   <script src="/javascript/card.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.css" />
   <link rel="stylesheet" href="css/next.css" />
+  <link rel="stylesheet" href="css/number.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="/javascript/number.js"></script>
@@ -55,10 +55,9 @@
   <div class="wrapper">
     <!-- ## phone area -->
     <div class="phone">
-      <span class="title">Phone Keyboard</span>
       <!-- ## phone area -->
       <div class="phone-container">
-        <input type="text" maxlength="11" class="number-input" id="numberInput" value="" placeholder="Phone Number"/>
+        <input type="text" maxlength="11" class="number-input" id="numberInput" value="" placeholder="Number"/>
         <!-- ## keyboard -->
         <div class="keyboard">
           <div class="number">
