--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>NFM - Near Field Market</title>
+
+  <!-- Liens vers fichiers css-->
   <link rel="stylesheet" href="css/contact.css" />
+  <link rel="stylesheet" href="css/contact_screen.css" />
 </head>
 
 <body>
 
+  <!-- Header (la bande en haut noir ou blanche avec le logo en grand qui ramene vers la page d'accueil) -->
     <header>
-        <img src="/pictures/logo2.PNG" id="nfm" />
+        <a href="index.html"><img src="/pictures/logo2.PNG" id="nfm" /></a>
     </header>
 
     <div class="background">
-        <div class="container">
+        <div class="container" id="drag">
           <div class="screen">
             <div class="screen-header">
               <div class="screen-header-left">
@@ -59,8 +63,6 @@
           </div>
         </div>
       </div>
-      
-      
 
 </body>
 
