--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-
+  <div class="progbar">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div> 
+  </div>
   <div class="header">
     <div class="menu_">
 
@@ -48,6 +52,7 @@
   <div class="content">
     <h1 class="title">NFM</h1>
     <p class="subtitle">Pay Differently</p>
+    <button onclick="myFunction()">Dark</button>
   </div>
 </div>
   </div>
@@ -80,5 +85,16 @@
     </div>
 
   </main>
+
+
+
+
+<script>
+
+function myFunction() {
+  var element = document.body;
+  element.classList.toggle("dark-mode");
+}
+</script>
 </body>
 </html>
