--- a/user.html
+++ b/user.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <img src="/pictures/logo2.PNG" id="nfm" />
+        <a href="index.html"><img src="/pictures/logo2.PNG" id="nfm" /></a>
     </header>
 
     <div id="separation"></div>
