--- a/index.html
+++ b/index.html
@@ -2,57 +2,61 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>NFM - Near Field Market</title>
+  <title>EvE Market</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" media="screen and (max-width: 1280px)" href="css/screen.css" />
+  <script src="https://code.iconify.design/1/1.0.4/iconify.min.js">   </script>
 </head>
 
 <body>
-  <div class="progbar">
-    <div class="progress-container">
-      <div class="progress-bar" id="myBar"></div>
-    </div> 
-  </div>
   <div class="header">
     <div class="menu_">
+      <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="#"><li>Buy an EvE-Wallet</li></a>
+            <a href="#"><li>EVECoin</li></a>
+            <a href="#"><li>About</li></a>
+            <a href="contact.html"><li>Contact</li></a>
+          </ul>
+        </div>
+      </nav>
 
-<!--    Made by Erik Terwan    -->
+      <div class="top-bar">
+        <a href="index.html">
+          <div class="logo">
+            <img src="pictures/eve-logo.jpg" id="logo" />
+          </div>
+        </a>
+        <a href="store.html">
+          <div class="magasins">
+            <img src="pictures/location_on_black_48dp.svg" id="magasins"/>
+          </div>
+        </a>
+        <div class="user">
+          <a href="user.html">
+            <img src="pictures/account_circle_black_48dp.svg" id="user"/>
+          </a>
+        </div>
+        <a href="bag">
+          <div class="bag">
+            <img src="pictures/shopping_basket_black_48dp.svg" id="bag"/>
+          </div>
+        </a>
+      </div>
+    </div>
 
-<nav role="navigation">
-  <div id="menuToggle">
-    <input type="checkbox" />
-    <span></span>
-    <span></span>
-    <span></span>
-    <ul id="menu">
-      <a href="#"><li>Buy an NFP</li></a>
-      <a href="#"><li>Ncoin</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="contact.html"><li>Contact</li></a>
-    </ul>
-  </div>
-</nav>
-
-  <a href="index.html"><img src="pictures/logo2.PNG" id="logo" /></a>
-
-<div class="magasins">
-  <a href="magasin"><img src="pictures/broche.svg" id="magasins"/></a>
-</div>
-<div class="user">
-  <a href="user.html"><img src="pictures/utilisateur.svg" id="user"/></a>
-</div>
-<div class="bag">
-  <a href="bag"><img src="pictures/bag.svg" id="bag"/></a>
-</div>
-     </div>
 
 
 
 <div class="wrapper">
   <div class="content">
-    <h1 class="title">NFM</h1>
+    <h1 class="title">EvE</h1>
     <p class="subtitle">Pay Differently</p>
-    <button onclick="myFunction()">Dark</button>
   </div>
 </div>
   </div>
@@ -63,10 +67,10 @@
       <img src="/pictures/store.jpg" id="store" />
       </div>
       <div class="store-texte">
-        <h1>NFM Store</h1>
-        <p>Les murs de nos NFM Store sont entièrement en verre par-balle.
+        <h1>EVE Store</h1>
+        <p>Les murs de nos EVE Store sont entièrement en verre par-balle.
           <br >
-          Ils disposent des derniers rayons NFR intelligents qui évite que vous rocherez dans tout notre magasin votre produit.
+          Ils disposent des derniers rayons intelligents qui évite que vous rocherez dans tout notre magasin votre produit.
            </p>
       </div>
     </div>
@@ -76,8 +80,8 @@
         <img src="/pictures/G2T92G.png" id="chip">
       </div>
       <div class="chip-texte">
-        <h1>NFP Chip</h1>
-        <p>Il faut vous disposez de notre dernière puce NFP qui sert de portefeuille numérique.
+        <h1>EvE Chip</h1>
+        <p>Il faut vous disposez de notre dernière puce EvE qui sert de portefeuille numérique.
           <br />
            Avec, vous pouvez entrer dans le magasin et en sortir sans même vous rendre compte que vous payer. Plus de file d’attente !
            </p>
@@ -86,15 +90,5 @@
 
   </main>
 
-
-
-
-<script>
-
-function myFunction() {
-  var element = document.body;
-  element.classList.toggle("dark-mode");
-}
-</script>
 </body>
 </html>
