settings user created

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>EvE Market</title>
+  <title>EvƎ Market</title>
   <link rel="shortcut icon" href="/pictures/eve-logo.jpg" type="image/x-icon"/> 
   <link rel="stylesheet" href="css/dashboard.css" />
   <link rel="stylesheet" media="screen and (max-width: 1280px)" href="css/screen.css" />
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-<input type="search" placeholder="Search anything" id="search_input" />
+<input type="text" placeholder="Search anything" id="search_input"  class="searchbar"/>
 
 <div class="panel">
   <div class="left">
